# kubernetes-cronjob-rs

./: Cargo.toml
samples/: cronjob.yaml
src/: main.rs  reconcile.rs  types.rs
