[package]
name = "kubernetes-cronjob"
version = "0.1.0"
edition = "2021"
default-run = "controller"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.53", features = ["backtrace"] }
chrono = "0.4.19"
cron = "0.9.0"
futures-util = "0.3.21"
k8s-openapi = { version = "0.14.0", features = ["v1_21", "schemars"] }
kube = { version = "0.68.0", features = ["derive", "runtime"] }
schemars = "0.8.8"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
thiserror = "1.0.30"
time = "0.1.44"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.30"
tracing-subscriber = "0.3.8"

[[bin]]
name = "controller"
path = "src/main.rs"

[[bin]]
name = "crdgen"
path = "src/bin/crdgen.rs"
